--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -4,34 +4,58 @@
         {
             "name": "Contrast",
             "file": "contrast",
-
-            "inputLineStyling": ["white", "white"],
+            "inputLineStyling": [
+                "white",
+                "white"
+            ],
             "tableCornerColor": "black",
-            "comboBoxStyling": ["white", "white", ""]
+            "comboBoxStyling": [
+                "white",
+                "white",
+                ""
+            ]
         },
         {
             "name": "Sunset",
             "file": "sunset",
-
-            "inputLineStyling": ["#5c374c", "#985277"],
+            "inputLineStyling": [
+                "#5c374c",
+                "#985277"
+            ],
             "tableCornerColor": "#ff8c61",
-            "comboBoxStyling": ["#985277", "#5c374c", "font-weight: bold;"]
+            "comboBoxStyling": [
+                "#985277",
+                "#5c374c",
+                "font-weight: bold;"
+            ]
         },
         {
             "name": "Black Space",
             "file": "black-space",
-
-            "inputLineStyling": ["#c79c00", "#white"],
+            "inputLineStyling": [
+                "#c79c00",
+                "#white"
+            ],
             "tableCornerColor": "#c79c00",
-            "comboBoxStyling": ["#D4D4D4", "#D4D4D4", ""]
+            "comboBoxStyling": [
+                "#D4D4D4",
+                "#D4D4D4",
+                ""
+            ]
         },
         {
             "name": "Strange Waters",
             "file": "strange-waters",
-
-            "inputLineStyling": ["#23AD8F", "#23AD8F"],
+            "inputLineStyling": [
+                "#23AD8F",
+                "#23AD8F"
+            ],
             "tableCornerColor": "#173535",
-            "comboBoxStyling": ["#296647", "#23AD8F", ""]
+            "comboBoxStyling": [
+                "#296647",
+                "#23AD8F",
+                ""
+            ]
         }
     ],
     "savedDate": "2024,06,02",
@@ -97,7 +121,7 @@
         121,
         3
     ],
-    "numberOfPoints": 88,
+    "numberOfPoints": 89,
     "lastGameId": 162,
     "fullGameList": [
         {
