--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,5 +1,5 @@
 {
-    "savedColorPalette": "aurora",
+    "savedColorPalette": "sunset",
     "colorPaletteList": [
         {
             "name": "Contrast",
@@ -76,18 +76,22 @@
             "file": "aurora",
             "inputLineStyling": [
                 "#89ce94",
-                "#86A59"
+                "#2D52B8"
             ],
-            "tableCornerColor": "#86A59",
+            "tableCornerColor": "#71C78B",
             "comboBoxStyling": [
-                "#86A59",
-                "#89CE9",
+                "#2D52B8",
+                "#71C78B",
                 "font-weight: bold;"
             ]
         }
     ],
-    "savedDate": "2024,06,23",
-    "gameOfTheWeek": 22,
+    "uiTogglePreferences": {
+        "pointsUI": "False",
+        "dailyWeeklyUI": "False"
+    },
+    "savedDate": "2024,06,30",
+    "gameOfTheWeek": 136,
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -98,41 +102,41 @@
         "Roll"
     ],
     "rollGameList": [
-        20,
-        4,
-        2,
-        48,
-        160,
-        48,
-        16,
-        136,
-        17,
-        158,
-        156,
-        100,
-        25,
-        109,
-        147,
-        113,
-        50,
+        143,
+        152,
+        68,
+        128,
+        101,
+        23,
         85,
-        25,
+        117,
+        109,
+        158,
+        43,
+        33,
+        28,
+        138,
+        64,
+        138,
+        121,
+        22,
+        31,
         -1
     ],
     "cardDrawList": [
-        13,
-        22,
-        107,
-        43,
-        8,
-        122,
-        68,
-        136,
-        100,
-        154,
-        54,
-        59,
-        4,
+        70,
+        156,
+        48,
+        109,
+        146,
+        44,
+        46,
+        108,
+        132,
+        69,
+        47,
+        83,
+        52,
         -1
     ],
     "personalGameList": [
@@ -149,7 +153,7 @@
         47,
         3
     ],
-    "numberOfPoints": 182,
+    "numberOfPoints": 186,
     "lastGameId": 162,
     "fullGameList": [
         {
