read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,5 +1,5 @@
 {
-    "savedColorPalette": "sunset",
+    "savedColorPalette": "strange-waters",
     "colorPaletteList": [
         {
             "name": "Contrast",
@@ -142,7 +142,7 @@
     "personalGameList": [
         53,
         92,
-        123,
+        23,
         120,
         22,
         77,
@@ -153,7 +153,7 @@
         47,
         3
     ],
-    "numberOfPoints": 186,
+    "numberOfPoints": 197,
     "lastGameId": 162,
     "fullGameList": [
         {
