read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -90,8 +90,8 @@
         "pointsUI": "False",
         "dailyWeeklyUI": "False"
     },
-    "savedDate": "2024,07,12",
-    "gameOfTheWeek": 66,
+    "savedDate": "2024,07,15",
+    "gameOfTheWeek": 137,
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -102,41 +102,75 @@
         "Roll"
     ],
     "rollGameList": [
-        159,
-        19,
-        41,
-        136,
-        156,
-        68,
-        34,
+        126,
+        122,
+        157,
+        2,
         20,
-        119,
-        79,
-        31,
+        116,
+        85,
+        42,
+        118,
+        77,
         164,
-        51,
-        96,
-        22,
-        15,
-        166,
-        58,
-        155,
+        104,
+        121,
+        70,
+        146,
+        167,
+        108,
+        75,
+        33,
+        -1,
+        126,
+        122,
+        157,
+        2,
+        20,
+        116,
+        85,
+        42,
+        118,
+        77,
+        164,
+        104,
+        121,
+        70,
+        146,
+        167,
+        108,
+        75,
+        33,
         -1
     ],
     "cardDrawList": [
-        144,
-        131,
-        84,
-        82,
-        138,
-        68,
-        56,
-        27,
-        112,
+        162,
         74,
-        156,
-        18,
-        20,
+        67,
+        148,
+        120,
+        25,
+        80,
+        158,
+        9,
+        69,
+        11,
+        13,
+        64,
+        -1,
+        162,
+        74,
+        67,
+        148,
+        120,
+        25,
+        80,
+        158,
+        9,
+        69,
+        11,
+        13,
+        64,
         -1
     ],
     "personalGameList": [
@@ -147,13 +181,13 @@
         22,
         77,
         103,
-        11,
+        164,
         90,
         125,
         47,
         3
     ],
-    "numberOfPoints": 124,
+    "numberOfPoints": 126,
     "lastGameId": 170,
     "fullGameList": [
         {
@@ -219,7 +253,7 @@
         {
             "name": "Black Book",
             "id": 11,
-            "completed": "Incomplete",
+            "completed": "Complete",
             "replayabilityFactor": "Moderate"
         },
         {
