read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -84,14 +84,28 @@
                 "#71C78B",
                 "font-weight: bold;"
             ]
+        },
+        {
+            "name": "Smoldering Flames",
+            "file": "blister-and-burn",
+            "inputLineStyling": [
+                "#F2613F",
+                "#3F88C5"
+            ],
+            "tableCornerColor": "#481E14",
+            "comboBoxStyling": [
+                "#9B3922",
+                "#F2613F",
+                "font-weight: bold;"
+            ]
         }
     ],
     "uiTogglePreferences": {
         "pointsUI": "False",
         "dailyWeeklyUI": "False"
     },
-    "savedDate": "2024,07,15",
-    "gameOfTheWeek": 137,
+    "savedDate": "2024,07,17",
+    "gameOfTheWeek": 48,
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -102,75 +116,75 @@
         "Roll"
     ],
     "rollGameList": [
-        126,
-        122,
-        157,
-        2,
-        20,
-        116,
+        15,
+        90,
         85,
-        42,
-        118,
-        77,
-        164,
-        104,
-        121,
-        70,
-        146,
-        167,
-        108,
-        75,
-        33,
+        125,
+        155,
+        34,
+        141,
+        58,
+        38,
+        131,
+        32,
+        168,
+        13,
+        169,
+        6,
+        85,
+        68,
+        148,
+        6,
         -1,
-        126,
-        122,
-        157,
-        2,
-        20,
-        116,
+        15,
+        90,
         85,
-        42,
-        118,
-        77,
-        164,
-        104,
-        121,
-        70,
-        146,
-        167,
-        108,
-        75,
-        33,
+        125,
+        155,
+        34,
+        141,
+        58,
+        38,
+        131,
+        32,
+        168,
+        13,
+        169,
+        6,
+        85,
+        68,
+        148,
+        6,
         -1
     ],
     "cardDrawList": [
-        162,
-        74,
-        67,
-        148,
-        120,
-        25,
+        163,
+        117,
+        77,
+        27,
+        68,
         80,
-        158,
-        9,
-        69,
-        11,
-        13,
-        64,
+        22,
+        10,
+        19,
+        47,
+        75,
+        65,
+        54,
         -1,
-        162,
-        74,
-        67,
-        148,
-        120,
-        25,
+        163,
+        117,
+        77,
+        27,
+        68,
         80,
-        158,
-        9,
-        69,
-        11,
-        13,
-        64,
+        22,
+        10,
+        19,
+        47,
+        75,
+        65,
+        54,
         -1
     ],
     "personalGameList": [
@@ -187,7 +201,7 @@
         47,
         3
     ],
-    "numberOfPoints": 126,
+    "numberOfPoints": 153,
     "lastGameId": 170,
     "fullGameList": [
         {
@@ -439,8 +453,8 @@
         {
             "name": "Half Life",
             "id": 42,
-            "completed": "Incomplete",
-            "replayabilityFactor": "Moderate"
+            "completed": "Complete",
+            "replayabilityFactor": "Low"
         },
         {
             "name": "Half Life 2",
