troubleshooted (troubleshot?) isue with automatic refresh of weekly game

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -86,7 +86,7 @@
             ]
         },
         {
-            "name": "Smoldering Flames",
+            "name": "Smolder",
             "file": "blister-and-burn",
             "inputLineStyling": [
                 "#F2613F",
@@ -104,8 +104,8 @@
         "pointsUI": "False",
         "dailyWeeklyUI": "False"
     },
-    "savedDate": "2024,07,20",
-    "gameOfTheWeek": 47,
+    "savedDate": "2024,08,03",
+    "gameOfTheWeek": 21,
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -116,41 +116,41 @@
         "Roll"
     ],
     "rollGameList": [
-        141,
-        166,
-        117,
+        79,
         77,
-        121,
-        136,
+        161,
+        69,
+        20,
+        106,
+        41,
+        68,
+        58,
+        128,
+        128,
+        57,
+        125,
+        138,
+        21,
+        140,
+        82,
         167,
-        19,
-        25,
-        116,
-        50,
-        9,
-        8,
-        80,
-        70,
-        85,
-        27,
-        15,
-        67,
+        58,
         -1
     ],
     "cardDrawList": [
-        13,
-        133,
-        6,
-        101,
-        97,
+        99,
+        56,
+        122,
+        96,
+        79,
         155,
-        67,
-        36,
-        2,
-        126,
-        118,
-        132,
-        3,
+        129,
+        131,
+        16,
+        12,
+        81,
+        46,
+        53,
         -1
     ],
     "personalGameList": [
@@ -161,13 +161,13 @@
         22,
         77,
         103,
-        164,
+        27,
         90,
         125,
         47,
         3
     ],
-    "numberOfPoints": 157,
+    "numberOfPoints": 162,
     "lastGameId": 170,
     "fullGameList": [
         {
